--- a/src/app.css
+++ b/src/app.css
@@ -16,7 +16,7 @@ body {
 .section {
   text-align: center;
   position: absolute;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   letter-spacing: 4px;
   overflow: hidden;
@@ -25,20 +25,18 @@ body {
 .section .fixed {
   overflow: hidden;
   position: fixed;
-  top: 50%;
-  left: 50%;
 }
 
 
 .section:nth-child(1) {
-  background-color: #000;
+  background: linear-gradient(to bottom, #000000, #000918);
   color: #fff;
   top: 0;
   z-index: 1;
 }
-.section:nth-child(1) .fixed {
+/* .section:nth-child(1) .fixed {
     transform: translate(-50%, -50%);
-}
+} */
 .section:nth-child(2) {
   color: #fff;
   top: 100vh;
